note/css/tw5.css
#twits-status {
	position: fixed;
	text-align: center;
	width: 480px;
	top: 1em;
    left: 50%;
    margin-left: -264px; /* - width/2 - paddingHorz/2 - border */
	padding: 16px 16px 16px 16px;
	-webkit-border-radius: 8px;
	-moz-border-radius: 8px;
	border-radius: 8px;
	color: #C09853;
	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
	background-color: #FCF8E3;
	border: 8px solid #FBEED5;
}

html { height: 100%; }
body {      
    padding:0 0;
    margin:0 0;
    height: 100%;
    overflow-y: hidden;
    overflow-x: hidden;
}

#tw5-container {
    display:table;
    height:100%;
    width:100%;
}

#tw5-nav {
    display:table-row;
}

#main {
    display:table-row;
    height:100%;
    transition: margin-left .5s;

}

/* The side navigation menu */
.sidenav {
    height: 100%; /* 100% Full-height */
    width: 0; /* 0 width - change this with JavaScript */
    position: fixed; /* Stay in place */
    z-index: 1; /* Stay on top */
    top: 0;
    left: 0;
    background-color: #111; /* Black*/
    overflow-x: hidden; /* Disable horizontal scroll */
    padding-top: 60px; /* Place content 60px from the top */
    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

/* The navigation menu links */
.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.3s
}

#twits-files {
    transition: 1.0s
}

#twits-files a {
    transition: 1.0s
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover, .offcanvas a:focus{
    color: #f1f1f1;
}

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

.modal-body {
    padding: 0px;
}

#progressBox {

    width: 0; /* 0 width - change this with JavaScript */
    position: fixed; /* Stay in place */
    z-index: 2; /* Stay on top */
    top: 50%;
    left: 50%;
    background-color: transparent; /* Black*/
    /*overflow-x: hidden; 
    overflow-y: hidden;
    padding-top: 60px; */
    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
    margin: 0 auto;
    transform: translate(-50%, -50%);

}

.showProgress #main {
      /* Blur and de-color */
  -webkit-filter: blur(5px) grayscale(80%);

  /* Recede */
  /*-webkit-transform: scale(0.9);*/
}

.showProgress #progressBox {
      /* Regular size and visible */
  /* prefix me */
  opacity: 1;

  /* Clickable 
  pointer-events: auto;*/
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
}

button > i {
    float: right;
    padding: 0px;
}

i{
    float: right;
    padding-right: 10px;
}

